samples/_failures_safe/1761653098_0fcbea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89e27084.c: In function ‘main’:
./samples/SAFE/__tmp_89e27084.c:120:64: error: expected ‘)’ at end of input
  120 |     int sample_count = sizeof(sample_logs) / sizeof(sample_logs
      |                                                    ~           ^
      |                                                                )
./samples/SAFE/__tmp_89e27084.c:120:5: error: expected declaration or statement at end of input
  120 |     int sample_count = sizeof(sample_logs) / sizeof(sample_logs
      |     ^~~
